<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_quakelist"
            android:icon="@drawable/quake_icon"
            android:title="@string/nav_quakelist" />

        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_nav_report"
            android:title="@string/nav_report" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_nav_settings"
            android:title="@string/nav_settings" />
    </group>
</menu>